--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><%= VITE_APP_TITLE %></title>
+  <title>
+    <%- VITE_APP_TITLE %>
+  </title>
   <script>
     window._AMapSecurityConfig = {
       securityJsCode: '867bc2b0e2a2d117b1251f4aac7d74fb',
@@ -15,7 +17,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <!-- <script type="module" src="/src/main.ts"></script> -->
 </body>
 
 </html>
